--- a/hw1-r.ipynb
+++ b/hw1-r.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 164,
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -509,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Table 2. Frequency of Inc_cat\"\n"
+      "[1] \"Table 6. Frequency of Inc_cat\"\n"
      ]
     },
     {
@@ -568,11 +568,241 @@
     "            df$income == 99, NA, df$income))))\n",
     "\n",
     "df$inc_cat <- inc_cat\n",
-    "print(\"Table 2. Frequency of Inc_cat\")\n",
+    "print(\"Table 6. Frequency of Inc_cat\")\n",
     "inc_cat.group <- group_by(df, inc_cat)  %>%\n",
     "    filter(complete.cases(inc_cat))\n",
     "inc_cat.group.summary <- summarize(inc_cat.group, count=n())\n",
     "inc_cat.group.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>inc_cat</th><th scope=col>htrips_avg</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1        </td><td> 6.649562</td></tr>\n",
+       "\t<tr><td>2        </td><td> 7.589198</td></tr>\n",
+       "\t<tr><td>3        </td><td>11.162081</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ll}\n",
+       " inc\\_cat & htrips\\_avg\\\\\n",
+       "\\hline\n",
+       "\t 1         &  6.649562\\\\\n",
+       "\t 2         &  7.589198\\\\\n",
+       "\t 3         & 11.162081\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "inc_cat | htrips_avg | \n",
+       "|---|---|---|\n",
+       "| 1         |  6.649562 | \n",
+       "| 2         |  7.589198 | \n",
+       "| 3         | 11.162081 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  inc_cat htrips_avg\n",
+       "1 1        6.649562 \n",
+       "2 2        7.589198 \n",
+       "3 3       11.162081 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "inc_cat.group <- group_by(df, inc_cat)  %>%\n",
+    "    filter(complete.cases(inc_cat))\n",
+    "inc_cat.group.summary <- summarize(inc_cat.group, htrips_avg=mean(htrips))\n",
+    "inc_cat.group.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Comparison of Income and INCVAL\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "     income          incval      \n",
+       " Min.   : 1.00   Min.   :  7500  \n",
+       " 1st Qu.: 4.00   1st Qu.: 42500  \n",
+       " Median : 5.00   Median : 62500  \n",
+       " Mean   :11.32   Mean   : 82890  \n",
+       " 3rd Qu.: 7.00   3rd Qu.:125000  \n",
+       " Max.   :99.00   Max.   :250000  \n",
+       "                 NA's   :430     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Standard Deviation of INCVAL:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "62390.2050005599"
+      ],
+      "text/latex": [
+       "62390.2050005599"
+      ],
+      "text/markdown": [
+       "62390.2050005599"
+      ],
+      "text/plain": [
+       "[1] 62390.21"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "incval <- ifelse(df$income == 1 , ((14999-0)/2 + 0), ifelse(\n",
+    "    df$income == 2, ((24999-15000)/2 + 15000), ifelse(\n",
+    "        df$income == 3, ((34999-25000)/2 + 25000), ifelse(\n",
+    "            df$income == 4, ((49999-35000)/2 + 35000), ifelse(\n",
+    "                df$income == 5, ((74999-50000)/2 + 50000), ifelse(\n",
+    "                    df$income == 6, ((99999-75000)/2 + 75000), ifelse(\n",
+    "                        df$income == 7, ((149999-100000)/2 + 100000), ifelse(\n",
+    "                            df$income == 8, 250000, ifelse(\n",
+    "                                df$income == 99, NA, df$income)))))))))\n",
+    "df$incval <- incval\n",
+    "print(\"Comparison of Income and INCVAL\")\n",
+    "df %>%\n",
+    "    select(income, incval) %>%\n",
+    "    summary()\n",
+    "print(\"Standard Deviation of INCVAL:\")\n",
+    "sd(df$incval, na.rm=TRUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>incval</th><th scope=col>count</th><th scope=col>avg_htrips</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>  7499.5 </td><td> 314     </td><td> 6.359873</td></tr>\n",
+       "\t<tr><td> 19999.5 </td><td> 485     </td><td> 6.837113</td></tr>\n",
+       "\t<tr><td> 29999.5 </td><td> 479     </td><td> 6.828810</td></tr>\n",
+       "\t<tr><td> 42499.5 </td><td> 743     </td><td> 8.079408</td></tr>\n",
+       "\t<tr><td> 62499.5 </td><td>1321     </td><td> 9.677517</td></tr>\n",
+       "\t<tr><td> 87499.5 </td><td>1134     </td><td>11.241623</td></tr>\n",
+       "\t<tr><td>124999.5 </td><td>1013     </td><td>12.244817</td></tr>\n",
+       "\t<tr><td>250000.0 </td><td> 530     </td><td>12.622642</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       " incval & count & avg\\_htrips\\\\\n",
+       "\\hline\n",
+       "\t   7499.5  &  314      &  6.359873\\\\\n",
+       "\t  19999.5  &  485      &  6.837113\\\\\n",
+       "\t  29999.5  &  479      &  6.828810\\\\\n",
+       "\t  42499.5  &  743      &  8.079408\\\\\n",
+       "\t  62499.5  & 1321      &  9.677517\\\\\n",
+       "\t  87499.5  & 1134      & 11.241623\\\\\n",
+       "\t 124999.5  & 1013      & 12.244817\\\\\n",
+       "\t 250000.0  &  530      & 12.622642\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "incval | count | avg_htrips | \n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "|   7499.5  |  314      |  6.359873 | \n",
+       "|  19999.5  |  485      |  6.837113 | \n",
+       "|  29999.5  |  479      |  6.828810 | \n",
+       "|  42499.5  |  743      |  8.079408 | \n",
+       "|  62499.5  | 1321      |  9.677517 | \n",
+       "|  87499.5  | 1134      | 11.241623 | \n",
+       "| 124999.5  | 1013      | 12.244817 | \n",
+       "| 250000.0  |  530      | 12.622642 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  incval   count avg_htrips\n",
+       "1   7499.5  314   6.359873 \n",
+       "2  19999.5  485   6.837113 \n",
+       "3  29999.5  479   6.828810 \n",
+       "4  42499.5  743   8.079408 \n",
+       "5  62499.5 1321   9.677517 \n",
+       "6  87499.5 1134  11.241623 \n",
+       "7 124999.5 1013  12.244817 \n",
+       "8 250000.0  530  12.622642 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "incval.group <- group_by(df, incval)  %>%\n",
+    "    filter(complete.cases(incval))\n",
+    "incval.group.summary <- summarize(incval.group, count=n(), \n",
+    "                                  avg_htrips=mean(htrips))\n",
+    "incval.group.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.227757539485971"
+      ],
+      "text/latex": [
+       "0.227757539485971"
+      ],
+      "text/markdown": [
+       "0.227757539485971"
+      ],
+      "text/plain": [
+       "[1] 0.2277575"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor(df$incval, df$htrips, use=\"complete.obs\")"
    ]
   }
  ],
