--- a/hw1-r.ipynb
+++ b/hw1-r.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "veh.group.sum %>% \n",
+    "veh.group.summary %>% \n",
     "    ggplot(aes(x=hhveh, y=count)) + \n",
     "    geom_bar(stat=\"identity\", fill=\"steelblue\") +\n",
     "    geom_text(aes(label=count), vjust=-0.3, color=\"black\", size=3.5) +\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
     }
    ],
    "source": [
-    "veh.group.sum %>% \n",
+    "veh.group.summary %>% \n",
     "    ggplot(aes(x=hhveh, y=htrips_avg)) + \n",
     "    geom_bar(stat=\"identity\", fill=\"steelblue\") +\n",
     "    geom_text(aes(label=format(htrips_avg, digits = 3)), \n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -803,6 +803,105 @@
    ],
    "source": [
     "cor(df$incval, df$htrips, use=\"complete.obs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Call:\n",
+      "lm(formula = incval ~ htrips, data = df)\n",
+      "\n",
+      "Residuals:\n",
+      "    Min      1Q  Median      3Q     Max \n",
+      "-163864  -40374  -13365   18957  185118 \n",
+      "\n",
+      "Coefficients:\n",
+      "            Estimate Std. Error t value Pr(>|t|)    \n",
+      "(Intercept)  64881.8     1264.2   51.32   <2e-16 ***\n",
+      "htrips        1830.5      100.9   18.14   <2e-16 ***\n",
+      "---\n",
+      "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Residual standard error: 60760 on 6017 degrees of freedom\n",
+      "  (430 observations deleted due to missingness)\n",
+      "Multiple R-squared:  0.05187,\tAdjusted R-squared:  0.05172 \n",
+      "F-statistic: 329.2 on 1 and 6017 DF,  p-value: < 2.2e-16\n",
+      "\n",
+      "       value \n",
+      "1.136773e-71 \n"
+     ]
+    }
+   ],
+   "source": [
+    "linearMod <- lm(formula = incval ~ htrips, data=df)\n",
+    "\n",
+    "modelSummary <- summary(linearMod)  # capture model summary as an object\n",
+    "modelCoeffs <- modelSummary$coefficients  # model coefficients\n",
+    "beta.estimate <- modelCoeffs[\"htrips\", \"Estimate\"]  # get beta estimate for speed\n",
+    "std.error <- modelCoeffs[\"htrips\", \"Std. Error\"]  # get std.error for speed\n",
+    "t_value <- beta.estimate/std.error  # calc t statistic\n",
+    "p_value <- 2*pt(-abs(t_value), df=nrow(df)-ncol(df))  # calc p Value\n",
+    "f_statistic <- linearMod$fstatistic[0]  # fstatistic\n",
+    "f <- summary(linearMod)$fstatistic  # parameters for model p-value calc\n",
+    "model_p <- pf(f[1], f[2], f[3], lower=FALSE)\n",
+    "\n",
+    "print(modelSummary)\n",
+    "print(model_p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"Removed 430 rows containing non-finite values (stat_smooth).\"Warning message:\n",
+      "\"Removed 430 rows containing missing values (geom_point).\""
+     ]
+    },
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NULL"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAARVBMVEUAAAAzMzMzZv9GgrRN\nTU1ni6loaGh8fHyMjIyampqnp6eysrK9vb3Hx8fKysrQ0NDW1tbZ2dnh4eHp6enr6+vw8PD/\n//8cUjSdAAAACXBIWXMAABJ0AAASdAHeZh94AAAgAElEQVR4nO2di3YTybJENQcBMwx3XoD/\n/1Ov/MD4oS5lVaZCUdU71joDM8dsRcre6q5EmMMdISSdw60LELJCEImQgiASIQVBJEIKgkiE\nFASRCCkIIhFSEEQipCAZkb6/ypt/Hc6qHLtCDJbnIJKeY1eIwfIcRNJz7AoxWJ6DSHqOXSEG\ny3MQSc+xK8RgeQ4i6Tl2hRgsz0EkPceuEIPlOYik59gVYrA8B5H0HLtCDJbnIJKeY1eIwfIc\nRNJz7AoxWJ6DSHqOXSEGy3MQSc+xK8RgeQ4i6Tl2hRgsz0EkPceuEIPlOYik59gVYrA8B5H0\nHLtCDJbnIJKeY1eIwfIcRNJz7AoxWJ6DSHqOXSEGy3MQSc+xK8RgeQ4i6Tl2hRgsz0EkPceu\nEIPlOYik59gVYrA8B5H0HLtCDJbnIJKeY1eIwfIcRNJz7AoxWJ6DSHqOXSEGy3MQSc+xK8Rg\neQ4i6Tl2hRgsz0EkPceuEIPlOYik59gVYrA8B5H0HLtCDJbnIJKeY1eIwfIcRNJz7AoxWJ6D\nSHqOXSEGy3MQSc+xK8RgeQ4i6Tl2hRgsz0EkPceuEIPlOYik59gVYrA8p1ek4ykvf0SkG4Lc\nOHaFfEU6Pv3j+PwviHQ7kBvHrhAiLc2xK8RgeQ4i6Tl2hRgsz8mL9NspkV9KyC7StWzgiuQA\ncuPYFZrqioRINwO5cewKIdLSHLtCDJbnIJKeY1eIwfIcRNJz7AoxWJ7TKRLvbHACuXHsChmL\ndD43qz8lx64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbL\ncxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE\n0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQc\nu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Q\ng+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5\nDiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNI\neo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5j\nV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVi\nsDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzP\nQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJ\nz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPs\nCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IM\nlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPqRGJEPIUrkgq\njl0hBstzEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNX\niMHyHETSc+wKMVieg0h6jl0hBstzEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKw\nPAeR9By7QgyW5yCSnmNXiMHyHETSc+wKMVieg0h6jl0hBstzEEnPsSvEYHkOIuk5doUYLM9B\nJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNXiMHyHETSc+wKMVieg0h6jl0hBstzEEnP\nsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNXiMHyHETSc+wK\nMVieg0h6jl0hBstzEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW\n5yCSnmNXiMHyHETSc+wKMVie4yTShw8fSjhv48axK8RgeY6RSB8+vDFpwqdTC3Lj2BXapUgf\nPrw1acKnUwty49gVQqQE533cOHaFGCzPQSQ9x64Qg+U5PiJxRpqeY1donyKxtZudY1dopyIN\n1J+SY1eIwfIcRNJz7AoxWJ6zlkhvbw5HOefD15sKNCFnKZHerSsGORvh600FmpCzkkjvF+hj\nnK3w9aYCTchBpHj4elOBJuQgUjx8valAE3JWEokz0o05doUQaZDD1u6mHLtCiLQ0x64Qg+U5\niKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLp\nOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5d\nIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB\n8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDyn\nV6TjKS9/RKQbgtw4doV8RTo+/eP4/C+I9Crnv/v4ACgSN45dIUSalbPx92H0g0Jx49gVMhfp\nDpE2svU3NHWDYnHj2BVyFunxbPRCpN9OifzSPeRJpFvXILdMTKQni7ginQ1XpN1yekW6Q6RW\nOCPtlYNItRy2djvlIJKeY1eIwfIcRNJz7AoxWJ7TKRLvbHACuXHsChmLdD43qz8lx64Qg+U5\niKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLp\nOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5d\nIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB\n8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTnVIFC37A/\nErfBZuQgkp5TBIr9FTKRmA02JQeR9JwaUPAvNYvEa7A5OYik5yDSghxE0nMQaUEOIuk5nJEW\n5CCSnsPWbkEOIuk5doUYLM9BJD3HrhCD5TmIVMvhbzXfKQeRSjmxBcCEg2lBE3IQqZITXEnP\nN5gYNCEHkSo5iLRbDiJVchBptxxEKuVwRtorB5FqOWztdspBJD3HrhCD5TmIpOfYFWKwPMdJ\npLe3RRM+nVqQG8eu0D5FendQn/Dp1ILcOHaFdinS+9XxhE+nFuTGsSuESAnO+7hx7AoxWJ6D\nSHqOXSEGy3N8ROKMND3HrtA+RWJrNzvHrtBORRqoPyXHrhCD5TmIpOfYFWKwPAeRajm8126n\nHEQq5fDu771yEKmSw59H2i0HkSo5iLRbDiJVchBptxxEKuVwRtorB5FqOWztdspBJD3HrhCD\n5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNXiMHyHETSc+wKMVieg0h6jl0hBstzEEnPsSvEYHkO\nIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNXiMHyHETSc+wKMVieg0h6\njl0hBstzEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW5yBSLYfv\n2bAgJ/QNbRCpksN3EVqQE/sWa4hUyOH72i3IiX1Sa0Qij3l6zm9dg1Sm95PKFSnP4Yq0IEd5\nRbpC/Tk5nJEW5HBGugGHrd2CHLZ2nhy7QgyW5yCSnmNXiMHyHETSc+wKMVieg0h6jl0hBstz\nEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNXiMHyHETS\nc+wKMVieg0h6jl0hBstzEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD5TmIpOfYFWKwPAeR9By7\nQgyW5yCSnmNXiMHyHETSc+wKMVieg0h6jl0hBstzEEnPsSvEYHkOIuk5doUYLM9BJD3HrhCD\n5TmIpOfYFWKwPAeR9By7QgyW5yCSnmNXiMHyHETSc+wKMVieg0h6jl0hBstzEKmWwzfR3ykH\nkUo5/LUue+UgUiWHv2hstxxEquQg0m45iFTJQaTdchCplMMZaa8cRKrlsLXbKQeR9By7QgyW\n5yCSnmNXiMHyHER6SNkdGbd2O+Ug0n3KdgQsG/bKQaTvhVtr1t+75SDSd0RCpDwHkb4jEiLl\nOYh0H85IXqAJOYj0ELZ2VqAJOYik59gVYrA8B5EeIr2QVIFCpSNxG8yNE7pdR6Tv6qNNEShW\nOhKzwdw4sQUSIsmXbTWgYOlIvAZz48SeaET6jkheg7lxECnMQaSiTPeZjwSR4hzOSDWZ7zMf\nCWekOIetnRXIjMPWzpNjV4jB8hxE0nPsCjFYnoNItRzlPSK3dkYcRCrlKLcWLBucOIhUyVHu\n0Vl/W3EQqZKDSLvlbIv09Xh39+/h+CcixTmItFvOpkhfD4e7b8fD4RAx6Wb13TickfbK2RTp\n0+Hf0/++/nc4IlIHh63dTjmbIp0uSH8fPj38iEi1HLtCDJbnbIp0PHz74/Df/SkJkYo5doUY\nLM/ZFOnP0/HoeH9B+jKRSOdvdla9tbPj2BVyEOnuy+H49+nCFPHIRaSN4/eiywY/jl0hC5F6\ncrP6r7K1EF5z/W3IsSuESEMcRLoxx66QhUg/vnw6HD6Hfj8WkS406AbF4saxK+Qg0sNvxt4v\nHL5NIxJnpBtz7Ao5iPT58Pmk0LfPhz/mEYmt3W05doUcRHr6jdgf/IZsOceuEIPlOZsi/X74\n8fifP+9BpLILCW8RWpCT+54Nf3z+7/7W7vNEZ6RhTtnRhjetLsjJfRehw6usLVLZso0/RrEg\nJ/ZEI9J3REKkVpIideUK9ZUcRCrKdJ/5SBApzuGMVJP5PvORJM5Ip3u58G3dCiKxtfMCmXHG\nt3a7E0nKsSvEYHnOeZGaefiTfsdTEOnGIDeOXSEHkT5vvTXoQaDjs1FBkUZuQyZ8OnmL0F45\nmyIdN65Qx7sRkYYOxhM+nbxpda+cTZH++/zl3HsajncjIo2taud7OvljFLvlbIq0sWx4L9Jv\np5y/eP3K0xfYpQ+bPnuZkzQSEul4xxWpEa5Iu+VsinQ2z/5wRjofzkh75XSK9Bi2dptha7dT\nzqZIP2/pju++QeTQ+vtK9afk2BVisDznvEjH1ju/EckF5MaxK3Rzkb6+8OjrOZF4Z8NGuLVb\nkDP+Xru74DfPR6Q3YdmwICfx7u/eXKP+jBzW3wtysn8e6ctx44yESJtBpAU5SZG+8Mco+jmI\ntCAnKdIx9HdeItLrcEZakJM7I7FsGOKwtVuQk9rafXn6BpGIVM6xK8Rgec6mSHe/h741JCLd\nEOTGsSt0c5F6vqedSKTEd/qInW1KOHzzkxU5mW9+4iZS5ntPBbdtBRy+HdeKnJV+Q3bsDzS9\n55xP2dZauf5OPSWvg0itZH9DFpG6OYi0IgeRznDOB5GKYiVAFWcpkTgjjT5WJIjUzEpnJLZ2\no48VCSK1k/oNWTeRFuLYFWKwPAeRHiJ9Zw9XpMk4XJGiHO17TTkjzcVZ64x0TY5y2VYGYmsn\n4qy1tbsqB5GKMt1nPhJECnMQqSjTfeYjQaQ4hzNSTeb7zEfCGSnOYWtnBTLjsLXz5NgVYrA8\nB5H0HLtCDJbnrCXS+WswbxG6EERqZ3e3dhunQuGygTetLsjZ3bJha0+pW38r9+isv0Wc/a2/\nEWkwiNQKIoU5iFQUKwGqOPsTiTPSYBCpmd2dkdjaDQaR2tnd1m4Sjl0hBstzEEnPsSvEYHkO\nIj2EWzsrkBmHW7soh2VDTeb7zEeyw2XDIIf1d1Gm+8xHssP19ygHkYoy3Wc+EkQKcxCpKNN9\n5iNBpDiHM1JN5vvMR8IZKc5ha2cFMuOwtfPk2BVisDwHkfQcu0IMludMI1LoPob32g0FkdpZ\n6dYudODj3d9jQaRmVlo2hFaQWx/E+vtCEKmVpdbfiDT6WJEgUiuIFO6DSEWxEqCKs5RInJFG\nHysSRGpmpTMSW7vRx4oEkdoJvTjOItJCHLtCDJbnINJDuCJZgcw4XJGiHM5INZnvMx/JWmek\na3LY2hVlus98JGtt7a7KQaSiTPeZjwSRwhxEKsp0n/lIECnO4YxUk/k+85FwRopz2NpZgcw4\nbO08OXaFGCzPQSQ9x64Qg+U5a4nEW4SGgkjt7O7WjjetjgWRmtndsmFrT8n6+0IQqZX9rb8R\naTCI1AoihTmIVBQrAao4+xOJM9JgEKmZ3Z2R2NoNBpHa2d3WbhKOXSEGy3MQSc+xK8Rgec40\nIiXuY7i1uxBEamelW7vMyZplw4UgUjMrLRtSu17W3xeCSK0stf5GpNHHigSRWkGkM5zzQaSi\nWAlQxVlKJM5Io48VCSI1s9IZia3d6GNFgkjtrLS1W4ljV4jB8hxE0nPsCjFYnuMk0tsrKO+1\nK3isSBCpnclu7d6d6bo5G6dClg0XgkjNTLZseL9l7OVs7SlZf18IIrWiXH9X5KnvLQj5h64G\nmT3WrtP7RHNFuvRhXJFUICuO8opUUp8zUl84I4k4k52R2Nr1psojRLqQ0IujkUjvui3KsSvE\nYHmOk0jNK1Li5Zcr0oUgUjuTXZGaZ6TMgYAz0oUgUjOTnZGaW7vUioqt3YUgUiuzbe0QqS+I\nJOIgUrgPIhXFSoAqzmwicUbqDGckEWeyMxJbu95UeYRIFxJ6cTQS6V23RTl2hRgsz0EkPceu\nEIPlOU4iNW/tEuHW7kIQqZ3Jbu2ay4ZMWDZcCCI1M9myobn+ToX194UgUiuzrb8RqS+IJOIg\nUpiDSEWxEqCKM5tInJE6wxlJxJnsjMTWrjds7UScybZ277styrErxGB5DiLpOXaFGCzPUYk0\nchvS/1678x/Erd2FIFI7Rrd2Qwfjl5wQYOODWDZcCCI1Y7RsGFvVvuCEAFsfxPr7QhCpFaf1\nNyJ1ggJBJBEHkbb7jNVDJBXIiuMkEmekXlAgnJFEHKMzElu7blDVY0WCSO2EXhxFIo1kVY5d\nIQbLc5xEeis+V6SCx4oEkdqZ7Ir07laUM1LBY0WCSM1YnZGCdVPf146t3WAQqRWrrd1QX0Qq\neKxIEKkVRAr3QaSiWAlQxZlNJM5IneGMJOJMdkZia9ebKo8Q6UJCL45GIr3rtijHrhCD5TmI\npOfYFWKwPMdJJG7t+sKtnYgz2a0dy4a+sGwQcSZbNrD+7gvrbxFntvU3IvUFkUQcRAr3QaSi\nWAlQxZlNJM5IneGMJOJMdkZia9ebKo8Q6UJCL45GIr3rtijHrhCD5TmIpOfYFWKwPEclUuTq\nyK1dX7i1E3GMbu0i5zWWDX1h2SDiGC0bIhtE1t99Yf0t4jitvxGpExQIIok4iLTdZ6BehINI\nK3KcROKM1AsKpMwjRGon9uKoEYmtXS+o6rEiQaR2Qi+OIpFGsirHrhCD5TmIpOfYFWKwPEcl\nErd2naCqx4oEkdoxurVj2dAJCoRlg4hjtGxg/d0JCoT1t4jjtP5GpE5QIIgk4iDSdp+BehEO\nIq3IcRKJM1IvKJAyjxCpndiLo0Yktna9oKrHigSR2gm9OIpEGsmqHLtCDJbnqETiitQJqnqs\nSBCpHaMrEmekTlAgnJFEHKMzElu7TlAgbO1EHKetHSJ1ggJBJBEHkbb7DNSLcBBpRY6TSJyR\nekGBlHmESO3EXhw1IrG16wVVPVYkiNRO6MVRJNJIVuXYFWKwPAeR9By7QgyW56hESt/ahcKt\n3VAQqR2jW7v0siEUlg1jQaRmjJYN6fV3KKy/B4NIrTitvxGpExQIIok4iBTmIFJRrASo4jiJ\nxBmpFxQIZyQRx+iMxNauG1T1WJEgUjuhF0eRSCNZlWNXiMHynF6Rjqe8/BGRbghy49gV8hXp\n+PSP4/O/BEVK39qF7mO4tRsKIrVzhVu7UZHSy4bQgY9lw1gQqZmrLRv6RUqvv0MrSNbfg0Gk\nVq63/n4t0m+nXPoVT13GPyYCiH1Q6S+8GsjssXad3ic6LNLxjivStUGBcEUSca52RRoQiTNS\nLyiQMo8QqZ3Yi2O3SMfX/4iJxNauF1T1WJEgUjuhF8dekY5vbAqKNJJVOXaFGCzP6RXp+Pay\nhEi3A7lx7Ar5inQ8Pr2l4RrvbODWri/c2ok4V7m1O5uS+iwb+sKyQcS50rLhWiKx/u4L628R\n52rrb0S6PigQRBJxECncB5GKYiVAFWc2kTgjdYYzkogz2RmJrV1vqjxCpAsJvTgaifSu26Ic\nu0IMlueoRIpIzRWpL1yRRByjK1LkNpMzUl84I4k4RmekyOKDrV1f2NqJOE5bO0TqBAWCSCIO\nIm33GagX4SDSihwnkTgj9YICKfMIkdqJvThqRGJr1wuqeqxIEKmd0IujSKSRrMqxK8RgeQ4i\n6Tl2hRgsz1GJxK1dJ6jqsSJBpHaMbu1YNnSCAmHZIOIYLRtYf3eCAmH9LeI4rb8RqRMUCCKJ\nOIi03WegXoSDSCtynETijNQLCqTMI0RqJ/biqBGJrV0vqOqxIkGkdkIvjiKRRrIqx64Qg+U5\niKTn2BVisDxHJRK3dp2gqseKBJHaMbq1Y9nQCQqEZYOIY7RsYP3dCQqE9beI47T+RqROUCCI\nJOIg0nafgXoRDiKtyHESiTNSLyiQMo8QqZ3Yi6NGJLZ2vaCqx4oEkdoJvTiKRBrJqhy7QgyW\n5yCSnmNXiMHyHJVI3Np1gqoeKxJEasfo1o5lQycoEJYNIo7RsoH1dycoENbfV+f89ZCPHz/a\nrL8RqRMUCCJdjfPXqyDSdp+BehEOIk3N+et8nETijNQLCqTMo52LtOHPz/zvlMiLo0Yktna9\noKrHimSXIgX8eY7P1m4oq3LsCu1gsAvabAj0M/w+0maf0C/s53BF8uIMafM696cknysSZ6RO\nUCCckTbz05N/Uv78zMOy4WJliUhs7TpBgbC1e5+3wrwRKeDP/94ivLZ2iNQJCgSRnjN82Tmj\nDSIh0nDmEunC132BP68fL/ZEa0TijNQLCqTMozlEunThqPbnV2IvjhqR2Nr1gqoeKxJnkVLa\nbC0bQv78SujFUSTSSFbl2BUyHKzmsnNGpGvNhUh6jl0hn8E2BAj4c/a+7Rfn6nOpROLWrhNU\n9ViR3Eyk4cvOheNO8WBGt3YsGzpBgcy7bLiWP++uO8InWiMS6+9OUCDzrb83vvqH/cn2CcZp\n/Y1InaBAphGp258L27Zsn94g0nafgXoRDiK9+HnmsvPPkDbtPsNxEokzUi8okDKPKvq8EyDs\nz7n7tn+SW7afWe6MxNauG1T1WJEk+rwVYNCfukLX4IReHEUijWRVjl2hfk7FZadx3zbhE4RI\neo5doTAnc+7pOe5M+ASpROLWrhNU9ViRXOqj8idcSMwxurVj2dAJCuRay4aENv/k/NkodGuO\n0bKB9XcnKJDq9Xe3P6+uOy9AVYVcOE7rb0TqBAVSJdKrC0mvP2+uO1YCVHEQabvPQL0IZyaR\nrnLcsRKgiuMkEmekXlAgPR6J1gVWApRxYi+OGpHY2vWCSh5ryJ9EIy8BVtzaDWVVztUL9R53\n/slu2S4V2gEHkfScaxUaXhe4DzYDRyUSt3adoMu5/4Zr3eu2K/YpBJlxjG7tWDZ0grZzhXUB\nIjVjtGxg/d0Jep9rrgsQqRWn9TcidYKeI1m3IVIriLTdZ6BehJMGhdfVfz38XSOh+8hAEKkV\nJ5E4IzVBY+uCMo8QqZ3Yi6NGJLZ2Z0DZdVuVR4h0IaEXR5FII1mVc/8boBF/ZIUQKc9RibTf\nK9L11gVckUQcoyvS/s5I11+3cUYScYzOSPvZ2n28T8VtW+Cx2NpJOMqt3aU8dRn/mAgg9kGl\nv/Cf+wS0+d/9x/Xjr1Oa9KX3ieaKdOnDnjnZdZvwhTIUrkitKK9IF+tHqrz7GLszUtSfi6CL\nDxUJZyQRx+iMNOXWbmhdEKopXCaFgkjthF5lRSKN5DYcwbvb5n6CBKAJOYj0lKg/skITcuwK\nLSiS2a3d0Lqg+i1C2XBrJ+IY3dqZLBty67arvWl1LCwbRByjZcOt198167bg9u86f7Bv9LEi\nQaRWnNbfWpG61wVlX/+ItCBndyL9FXx3zvvbNkQqipUAVRwnka5wRgr/YdJtf/rqcUbSgbw4\nsRdHjUhlW7ueP4z91zlO7KHPhq2dCmTGCb04ikQayQtOat1m9mnxK8RgeY6nSI/Xm3/Ct23t\ntxm4fVrsCjFYnqMSKXRr9+I7h46de84/Crd2F4JI7Rjd2p07r3WvCz5eenfbxqkwuG27+FEs\nG1QgL47RsuHlBnFo3db1+0jvZrz0JLD+LoqXAAuuvz88/hnsLn/+d39G6hoGkQaDSK2YiXRR\nm4+P+evXuafuLUIXgkhFsRKgiuMk0vdNkV7c5X38+KZu/ZtWO39hN4cz0oocozPSqcx7f84V\n3uaEvmjOfxBbuwtBpHZCL44ikX7tGOL9zZ5Ovt5koAk5KpEiUnNF6gtXJBHH6IoUuc189zGc\nkQoeKxJEasbojBRZfLz/GLZ2BY8VCSK14rS1Q6ROUCCIJOIg0nafgXoRDiKtyHESiTNSLyiQ\nMo8QqZ3Yi6NGJLZ2vaCqx4oEkdoJvTiKRBrJqhy7QgyW5yCSnmNXiMHyHJVI3Np1gqoeKxJE\nasfo1o5lQycoEJYNIo7RsoH1dycoENbfIo7T+huROkGBIJKIg0jbfQbqRTiItCLHSSTOSL2g\nQMo8QqR2Yi+OGpHY2vWCqh4rEpipXHcAAAazSURBVERqJ/TiKBJpJKty7AoxWJ6DSHqOXSEG\ny3NUInFr1wmqeqxIEKkdo1s7lg2doEBYNog4RssG1t+doEBYf4s4TutvROoEBYJIIg4ibfcZ\nqBfhINKKHCeROCP1ggIp8wiR2om9OGpEYmvXC6p6rEgQqZ3Qi6NIpJGsyrErxGB5DiLpOXaF\nGCzPUYnErV0nqOqxIkGkdoxu7Vg2dIICYdkg4hgtG1h/d4ICYf0t4jitvxGpExQIIok4iLTd\nZ6BehINIK3KcROKM1AsKpMwjRGon9uKoEYmtXS+o6rEiQaR2Qi+OIpFGsirHrhCD5Tkqkbgi\ndYKqHisSRGrH6IrEGakTFAhnJBHH6IzE1q4TFAhbOxHHaWuHSJ2gQBBJxEGk7T4D9SIcRFqR\n4yQSZ6ReUCBlHiFSO7EXR41IbO16QVWPFQkitRN6cRSJNJJVOXaFGCzPQSQ9x64Qg+U5KpG4\ntesEVT1WJIjUjtGtHcuGTlAgLBtEHKNlA+vvTlAgrL9FHKf1NyJ1ggJBJBEHkbb7DNSLcBBp\nRY6TSJyRekGBlHmESO3EXhw1IrG16wVVPVYkiNRO6MVRJNJIVuXYFWKwPAeR9By7QgyW56hE\n2sutXSgTfp1oQWYco1u7vSwbYjH7OmGwdoyWDXtZfwfj9XXCYO04rb8R6SogN45dIUR6y0Gk\nGTh2hZYTiTPSVUBuHLtCy52R2NpdBeTGsSu03tZuKKty7AoxWJ4zKtLxFES6MciNY1fIX6Tj\n8z+CIu3l1k55jxh6rEgQqZ0r3tr1irSXZYNyaxF7rEgQqZlrLhs6RdrL+lu5Rw8+ViSI1MpV\n198vRPrtlEsf/tRl/GMigNgHlf7Cq4HMHmvX6X2iuSJd+jCuSCqQFUd1RYqIxBmpFxRImUeI\n1E7sxVEjElu7XlDVY0WCSO2EXhxFIo1kVY5dIQbLcxBJz7ErxGB5zqBIvLPBAeTGsSs0gUiv\nc7P6U3LsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwH\nkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPQSQ9\nx64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFYnoNIeo5dIQbLcxBJz7Er\nxGB5DiLpOXaFGCzPQSQ9x64Qg+U5iKTn2BVisDwHkfQcu0IMlucgkp5jV4jB8hxE0nPsCjFY\nnoNIeo5dIQbLcxBJz7ErxGB5DiLpOXaFGCzPqRHpdS7+TZjiuPWxK+TWx65QVx9EksWtkFsf\nu0KI9BC3PnaF3PrYFUKkh7j1sSvk1seuECI9xK2PXSG3PnaFbiQSITsOIhFSEEQipCCIREhB\nEImQglSJdDylCDX8+McXPbZ+VNV5LhX5UdnH4kmKPjGqQi8fb/AJKhLp+PyPG+X4usfWj6o2\nvx6vUUZX6unT7/IkRZ8YVaHnx0k8QYh0lTJeIh1/XpHufv2ASO/7INLzQ9/6U/Kqj8vXyd2b\nhzLo0y5wk0LH3BO0ikg/b26feiDSuT5WT5KjSIknaBWRnv5h8Sm5e/l4HqXc+jw+jlOhbJ9F\nRPpZwuFT8vxQRl8nx5c/M+jjKdLPnyCSxafk+aGMvk7sRFruCVpEJKNPyas+LqUs+xgVyvdZ\nSKSf/0OkRh+PJ+n4utXNC73oM/oErfTOhsiPqjpmpbz6HKPvIBAVqujDe+0IKQgiEVIQRCKk\nIIhESEEQiZCCIBIhBUEkQgqCSIQUBJEIKQgiEVIQRJojh/AnKv6RpDA863MEkczDs75aEOkm\n4VmfI/d6HA7ffj8cv9z/6+NPfhw+Pfyfnw7/3f37++Hx/0Okm4RnfY48inQ8nHKy5cfDT36/\n+/3w7fT/fTv59Pfh8PT/IdJNwrM+Rx5F+vzj7uvheHf35fDH3b+n//T3vTmnf/v7dFH6v7u7\n/x4/6tZddxme9TnydGv39LNPhx+P//nT4x9Hu//pt7///IxINwvP+hz5pcgrWb4e/j1dmv48\n/ezz470dIt0oPOtzZEOkH6d7vC/3l6c/Dp++/v0NkW4WnvU58lqk51u7k0DfDr8//deTVoh0\nq/Csz5HXIn05fHncLNyvHE53d/f/9d+7H5yRbhee9TnyWqRvD+vvh99E+vT4w5cDZ6Sbhmd9\njrwW6e6/08Xnj/sd3t3X+7333f093uHzv4h0s/CsE1IQRCKkIIhESEEQiZCCIBIhBUEkQgqC\nSIQUBJEIKQgiEVKQ/wcv2RFvQdLO2wAAAABJRU5ErkJggg==",
+      "text/plain": [
+       "plot without title"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df %>% \n",
+    "    ggplot(aes(x=incval, y=htrips)) + \n",
+    "    geom_point(stat=\"identity\", color=\"steelblue\") +\n",
+    "    geom_smooth(method=lm)\n",
+    "    labs(title=\"Fig 4. Household Trips by INCVAL\") +\n",
+    "    theme_minimal()"
    ]
   }
  ],
